--- a/images.html
+++ b/images.html
@@ -13,24 +13,24 @@
         <img
           src="./img/cabo_da_roca.webp"
           alt="Cape Roca"
-          width="200px"
-          height="200px"
+          width="200"
+          height="200"
         />
       </li>
       <li>
         <img
           src="./img/cabo_da_roca2.webp"
           alt="Cape Roca"
-          width="200px"
-          height="200px"
+          width="200"
+          height="200"
         />
       </li>
       <li>
         <img
           src="./img/cabo_da_roca3.webp"
           alt="Cape Roca"
-          width="200px"
-          height="200px"
+          width="200"
+          height="200"
         />
       </li>
     </ul>
